--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 }
 
 #board-container {
+    box-sizing: border-box;
     height: 300px;
     width: 300px;
 }
@@ -20,16 +21,20 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
+    min-width: 100%;
+    min-height: 100%;
     place-items: center;
 }
 
 .cell {
+    display: grid;
     box-sizing: border-box;
-    width: 1/3;
-    height: 1/3;
-    padding: 10%;
+    min-width: 100%;
+    min-height: 100%;
+    place-items: center;
 }
 
 .cell > img {
-    max-width: 100%;
+    max-width: 80%;
+    max-height: 80%;
 }
